--- a/ITParkWPF/MainWindow.xaml
+++ b/ITParkWPF/MainWindow.xaml
@@ -1,26 +1,142 @@
-﻿<Window x:Class="ITParkWPF.MainWindow"
+﻿<Window x:Class="Calculator.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ITParkWPF"
+        xmlns:local="clr-namespace:Calculator"
         mc:Ignorable="d"
-        Title="MyWpfApp" Height="522" Width="816" >
-    <Grid>
-        <Grid.ColumnDefinitions>
-
-        </Grid.ColumnDefinitions>
-        <Button x:Name="bigbtn" Content="ShowRes" HorizontalAlignment="Left" Margin="10,379,0,0" VerticalAlignment="Top" Height="101" Width="301" FontSize="72" Click="bigbtn_Click"/>
-        <Label x:Name="lbl1" Content="My First WPF APP" HorizontalAlignment="Left" VerticalAlignment="Top" Height="92" Width="796" FontSize="65" HorizontalContentAlignment="Center" FontFamily="Txt" Margin="10,62,0,0" Grid.ColumnSpan="2" FontWeight="Bold" MouseMove="lbl1_MouseMove" MouseEnter="lbl1_MouseEnter"/>
-        <Border BorderThickness="1" BorderBrush="Black" Margin="329,379,10,26" Height="101"/>
-        <Label x:Name="lblMessage" Content="" HorizontalAlignment="Left" Margin="329,379,0,0" VerticalAlignment="Top" Width="477" Height="101" FontSize="70" HorizontalContentAlignment="Center"/>
-        <TextBox x:Name="txt1" HorizontalAlignment="Left" Margin="10,178,0,0" Text="First Number" TextWrapping="Wrap" VerticalAlignment="Top" Width="373" Height="88" FontSize="48" GotFocus="txt1_GotFocus" TextChanged="txt1_TextChanged"/>
-        <TextBox x:Name="txt2" HorizontalAlignment="Left" Margin="408,178,0,0" Text="Second Number" TextWrapping="Wrap" VerticalAlignment="Top" Width="361" Height="88" FontSize="48" GotFocus="txt2_GotFocus" TextChanged="txt2_TextChanged"/>
-        <Button Content="+" HorizontalAlignment="Left" Margin="182,285,0,0" VerticalAlignment="Top" Height="68" Width="81" FontSize="36" Click="Button_Click"/>
-        <Button Content="-" HorizontalAlignment="Left" Margin="294,285,0,0" VerticalAlignment="Top" Height="68" Width="64" FontSize="36" Click="Button_Click_1"/>
-        <Button Content="*" HorizontalAlignment="Left" Margin="388,285,0,0" VerticalAlignment="Top" Height="68" Width="79" FontSize="36" Click="Button_Click_2"/>
-        <Button Content="/" HorizontalAlignment="Left" Margin="510,285,0,0" VerticalAlignment="Top" Height="68" Width="78" FontSize="36"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="666,285,0,0" VerticalAlignment="Top" Height="54" Width="87" Click="Button_Click_5"/>
+        Title="MainWindow" Width="800" Height="480">
+    <Grid Background="#FFB6F3BD" Height="480">
+        <Button x:Name="One" Content="1" Margin="150,300,575,105" BorderBrush="#FF131313" FontSize="22" FontWeight="Bold" Foreground="#FFECECEC" Click="One_Click" >
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#FF13FFE4" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Button x:Name="Two" Content="2" Margin="250,300,475,105" BorderBrush="#FF131313" FontSize="22" FontWeight="Bold" Foreground="#FFECECEC" Click="Two_Click">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#FF13FFE4" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Button x:Name="Three" Content="3" Margin="350,300,375,105" BorderBrush="#FF131313" FontSize="22" FontWeight="Bold" Foreground="#FFECECEC" Click="Three_Click">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#FF13FFE4" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Button x:Name="Four" Content="4" Margin="150,200,575,205" BorderBrush="#FF131313" FontSize="22" FontWeight="Bold" Foreground="#FFECECEC" Click="Four_Click">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#FF13FFE4" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Button x:Name="Five" Content="5" Margin="250,200,475,205" BorderBrush="#FF131313" FontSize="22" FontWeight="Bold" Foreground="#FFECECEC" Click="Five_Click">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#FF13FFE4" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Button x:Name="Six" Content="6" Margin="350,200,375,205" BorderBrush="#FF131313" FontSize="22" FontWeight="Bold" Foreground="#FFECECEC" Click="Six_Click">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#FF13FFE4" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Button x:Name="Seven" Content="7" Margin="150,100,575,305" BorderBrush="#FF131313" FontSize="22" FontWeight="Bold" Foreground="#FFECECEC" Click="Seven_Click">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#FF13FFE4" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Button x:Name="Eight" Content="8" Margin="250,100,475,305" BorderBrush="#FF131313" FontSize="22" FontWeight="Bold" Foreground="#FFECECEC" Click="Eight_Click">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#FF13FFE4" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Button x:Name="Nine" Content="9" Margin="350,100,375,305" BorderBrush="#FF131313" FontSize="22" FontWeight="Bold" Foreground="#FFECECEC" Click="Nine_Click">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#FF13FFE4" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Button x:Name="Plus" Content="+" Margin="450,100,275,305" BorderBrush="#FF131313" FontSize="22" FontWeight="Bold" Foreground="#FFFFFB95" Click="Plus_Click">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#FFFF15F6" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Button x:Name="Minus" Content="-" Margin="550,100,175,305" BorderBrush="#FF131313" FontSize="22" FontWeight="Bold" Foreground="#FFFFFB95" Click="Minus_Click">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#FFFF15F6" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Button x:Name="Multiplication" Content="*" Margin="450,200,275,205" BorderBrush="#FF131313" FontSize="22" FontWeight="Bold" Foreground="#FFFFFB95" Click="Multiplication_Click">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#FFFF15F6" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Button x:Name="Division" Content="/" Margin="550,200,175,205" BorderBrush="#FF131313" FontSize="22" FontWeight="Bold" Foreground="#FFFFFB95" Click="Division_Click">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#FFFF15F6" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Button x:Name="Zero" Content="0" Margin="450,300,275,105" BorderBrush="#FF131313" FontSize="22" FontWeight="Bold" Foreground="#FFECECEC" Click="Zero_Click">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#FF13FFE4" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Button x:Name="DEL" Content="DEL" Margin="550,300,175,105" BorderBrush="Black" FontSize="22" FontWeight="Bold" Foreground="#FFDEE839" Click="DEL_Click">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#FFFF2020" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Label x:Name="Lbl" Content="0" Margin="150,10,175,400" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" FontSize="48" FontWeight="Normal" Background="White" Foreground="#FFB14015" FontFamily="GOST" ScrollViewer.VerticalScrollBarVisibility="Disabled" BorderBrush="Black"/>
+        <Border BorderBrush="Black" BorderThickness="1" Margin="150,10,175,400"/>
+        <Button x:Name="Result" Content="=" Margin="250,390,275,20" BorderBrush="#FF131313" FontSize="22" FontWeight="Bold" Foreground="#FFECECEC" Click="Result_Click">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#FFFFD613" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
 
     </Grid>
 </Window>
