--- a/ITParkWPF/MainWindow.xaml
+++ b/ITParkWPF/MainWindow.xaml
@@ -32,8 +32,8 @@
         </ComboBox>
         <Button Content="Button" HorizontalAlignment="Left" Margin="788,342,0,0" VerticalAlignment="Top" Width="262" Click="Button_Click_2"/>
         <TextBox x:Name="teamname" HorizontalAlignment="Left" Margin="788,403,0,0" Text="TeamName" TextWrapping="Wrap" VerticalAlignment="Top" Width="262"/>
-        <ListBox Margin="1095,39,161,10"/>
-        <Button Content="AddTeamToDB" HorizontalAlignment="Left" Margin="788,466,0,0" VerticalAlignment="Top" Width="116"/>
+        <ListBox x:Name="teamListBox" Margin="1095,39,161,10" Loaded="ListBox_Loaded" SelectionChanged="teamListBox_SelectionChanged"/>
+        <Button Content="AddTeamToDB" HorizontalAlignment="Left" Margin="788,466,0,0" VerticalAlignment="Top" Width="116" Click="Button_Click_3"/>
         <Button Content="UpdateTeam" HorizontalAlignment="Left" Margin="919,466,0,0" VerticalAlignment="Top" Width="131"/>
 
     </Grid>
