--- a/ITParkWPF/MainWindow.xaml
+++ b/ITParkWPF/MainWindow.xaml
@@ -25,7 +25,7 @@
         <Label x:Name="teammate5" Content="#5" HorizontalAlignment="Left" Margin="801,208,0,0" VerticalAlignment="Top" Width="236"/>
         <Label x:Name="teammate4" Content="#4" HorizontalAlignment="Left" Margin="801,174,0,0" VerticalAlignment="Top" Width="236"/>
         <Label x:Name="teammate3" Content="#3" HorizontalAlignment="Left" Margin="801,135,0,0" VerticalAlignment="Top" Width="236"/>
-        <ComboBox x:Name="cmbbox1" HorizontalAlignment="Left" Margin="788,268,0,0" VerticalAlignment="Top" Width="262" MaxDropDownHeight="45" SelectedIndex="1">
+        <ComboBox x:Name="cmbbox1" HorizontalAlignment="Left" Margin="788,268,0,0" VerticalAlignment="Top" Width="262" MaxDropDownHeight="45" SelectedIndex="1" SelectionChanged="cmbbox1_SelectionChanged">
             <ListBoxItem Content="Add Custom"/>
             <ListBoxItem Content="Random Selection"/>
             <ListBoxItem Content="ClearTeam"/>
